# charlesmine-rs

./: Cargo.toml  LICENSE.Apache2  LICENSE.MIT  README.md  build.rs
res/: CharlesMine.rc  Resource.h
src/: assets.rs  config.rs  controller.rs  layout.rs  main.rs  model.rs  model_config.rs  model_gamemode.rs  ui_apiw.rs  view.rs  view_assets.rs  view_assets_catalog.rs
